--- a/Pages/Novena/novena.less
+++ b/Pages/Novena/novena.less
@@ -15,6 +15,7 @@
     }
 
     table {
+        margin-top: 2rem;
         border-collapse: collapse;
         width: 900px;
         text-align: left;
